The header is complete

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,4 +29,21 @@ body
   margin: 0;
   padding: 0;
   font-family: aria !important;
+  color: #55555f;
+}
+.rotate-y-180
+{
+  transform: rotateY(180deg);
+}
+.scale-2
+{
+  scale: 2;
+}
+.search-box-main
+{
+  direction: ltr;
+}
+.search-box-main > input
+{
+  direction: rtl;
 }
