ctreated graphicFilesSlider and latestArticles section in HomePage

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -88,5 +88,9 @@ body
 } 
 .GraphicCategories:hover
 {
-  text-shadow: 1px 1px 3px black;
+  text-shadow: 1px 1px 5px rgb(255, 255, 255);
+}
+.latest_article
+{
+  width: 25%;
 }
